force-app/main/default/objects/KPIReports_TopLoyaltyProgram__c/KPIReports_TopLoyaltyProgram__c.object-meta.xml
<CustomObject>
    <description>This object is filled in by the batch Batch_BBH_KPIs</description>
    <label>KPI Reports Top Loyalty Program</label>
    <nameField>
        <label>KPI Reports Top Loyalty Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Reports Top Loyalty Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>