force-app/main/default/objects/KPIReports_TopLoyaltyProgram__c/fields/Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booking_Amount__c</fullName>
    <description>Price of booking</description>
    <label>Booking Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>