force-app/main/default/objects/KPIReports_TopLoyaltyProgram__c/fields/Booking_Country__c.field-meta.xml
<CustomField>
    <fullName>Booking_Country__c</fullName>
    <description>Booking country of hotel</description>
    <label>Booking Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>