force-app/main/default/objects/KPIReports_TopLoyaltyProgram__c/fields/Booking_date__c.field-meta.xml
<CustomField>
    <fullName>Booking_date__c</fullName>
    <label>Booking date</label>
    <type>Date</type>
</CustomField>