force-app/main/default/objects/KPIReports_TopLoyaltyProgram__c/fields/Booking_EClub_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_EClub_Status__c</fullName>
    <label>Booking EClub Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>