force-app/main/default/objects/KPIReports_TopLoyaltyProgram__c/fields/Booking_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Booking_Hotel__c</fullName>
    <label>Booking Hotel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>