force-app/main/default/objects/KPIReports_TopLoyaltyProgram__c/fields/Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Id__c</fullName>
    <label>Booking Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>