force-app/main/default/objects/KPIReports_TopLoyaltyProgram__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>